--- a/src/components/DialogMessage/DialogMessage.scss
+++ b/src/components/DialogMessage/DialogMessage.scss
@@ -11,6 +11,9 @@
     justify-items: center;
     align-items: start;
     align-content: center;
+    width: 91px;
+    height: 71px;
+    text-align: center;
 
 }
 
@@ -20,7 +23,7 @@
 }
 
 .Dialog__message__text {
-    width: 310px;
+    width: 320px;
     border: 1px solid #000;
     padding: 10px;
 }
