--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App-wrapper {
+  position: relative;
     display: grid;
     grid-template-areas: 
             "H H H"
@@ -11,3 +12,4 @@
     height: 1200px;
     margin: 0 auto;
 }
+
