--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,22 @@
     gap: 15px;
     grid-template-columns: 170px auto auto;
     grid-template-rows: 80px auto;   
-    min-height: 1000px;
+    // min-height: 1000px;
     max-width: 1000px;
-    height: 1200px;
+    height: 100vh;
     margin: 0 auto;
+
+    
+    @media (max-width: 776px) {
+      min-height: 100vh;
+      height: 100vh;
+      grid-template-areas: 
+      "H H H"
+      "M M M"
+      "N N N";
+      grid-template-rows: 80px auto 80px ;  
+      gap: 0px;
+    
+    }
 }
 
