--- a/src/components/PostsInput/PostsInput.scss
+++ b/src/components/PostsInput/PostsInput.scss
@@ -1,6 +1,7 @@
 .posts__input {
     display: grid;
     gap: 10px;
+    align-self: end;
 }
 
 .posts__input__text-area {
@@ -24,4 +25,7 @@
     padding-bottom: 10px;
     background-color: blanchedalmond;
 
+    @media (max-width: 776px) {
+      width: 90vw;
+    }
 }
