--- a/src/pages/UsersList/UsersList.scss
+++ b/src/pages/UsersList/UsersList.scss
@@ -3,32 +3,42 @@
   align-items: center;
   align-content: flex-start;
   gap: 20px;
+  width: 100vw;
+  @media (max-width: 776px) {
+    overflow: auto;
+    justify-items: center;
+  }
 }
 
 .userList__item {
   height: 170px;
+  width: 270px;
   border: 1px solid #000;
   padding: 10px;
+
+  @media (max-width: 776px) {
+    width: 70vw;
+  }
 }
 
-  .typing-demo {
-    width: 22ch;
-    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 3px solid;
-    font-family: monospace;
-    font-size: 2em;
+.typing-demo {
+  width: 22ch;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
   }
-  
-  @keyframes typing {
-    from {
-      width: 0
-    }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
   }
-      
-  @keyframes blink {
-    50% {
-      border-color: transparent
-    }
-  }
+}
