--- a/src/components/DialogsList/DialogsList.scss
+++ b/src/components/DialogsList/DialogsList.scss
@@ -34,10 +34,10 @@
 }
 
 .main__dialogs .linkBtn {
-  color: #000;
+  // color: #000;
 }
 .main__dialogs .linkBtn:hover {
-  color: rgba(0,0,0, .5)
+  // color: rgba(0,0,0, .5)
 }
 
 .dialogs__item--active {
