--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,7 +18,15 @@
     pointer-events: none;
 }
 .header__buttons{
+  display: grid;
+  grid-auto-flow: column;
   justify-self: end;
+  gap: 10px;
+}
+.themeButton {
+  background-color: rgba(240, 248, 255, 0);
+  // border: none;
+  font-size: 23px;
 }
 
 
