--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,22 @@ code {
 button {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 255, 255, 0);
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: #BEBEBE;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
