--- a/src/pages/Settings/Settings.module.scss
+++ b/src/pages/Settings/Settings.module.scss
@@ -5,6 +5,7 @@
     gap: 30px;
   }
 }
+
 .title {
   font-weight: 600;
   font-size: 19px;
@@ -23,7 +24,8 @@
 }
 
 .dropAreaT{
-  border: 2px solid #000;
+  border: 2px solid ;
+  // border-color: #000;
   width: 200px;
   height: 200px;
   text-align: center;
@@ -32,7 +34,8 @@
 }
 
 .dropAreaF {
-  border: 2px dashed #000;
+  border: 2px dashed ;
+  // border-color: #000;
   width: 200px;
   height: 200px;
   text-align: center;
