--- a/src/pages/UserProfile/UserProfile.scss
+++ b/src/pages/UserProfile/UserProfile.scss
@@ -4,6 +4,7 @@
     grid-area: M;
     padding: 10px;
     display: grid;
+    gap: 10px;
     align-content: start;
     max-height: 1200px;
     overflow: auto;
@@ -14,7 +15,24 @@
 
 }
 
+.main__posts {
+  display: grid;
+}
+
 .posts__last-posts {
     display: grid;
     gap: 40px;
 }
+
+.posts__last-posts--tiles {
+  display: grid;
+  gap: 40px;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: row;
+}
+
+.tiles-button {
+  justify-self: center;
+  border-radius: 0;
+}
+
